--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 		<meta name="color-scheme" content="dark light">
 		<meta name="theme-color" content="#333333">
-		<title>webretro</title>
+		<title>Frosix</title>
 		<meta name="description" content="RetroArch in your browser! Libretro cores compiled to WASM using emscripten, plus a custom UI.">
 		<meta name="robots" content="nofollow">
 		<meta name="og:title" content="webretro">
@@ -185,7 +185,7 @@
 					</li>
 				</ul>
 			</div>
-			<h1 id="webretrotitle">webretro</h1>
+			<h1 id="webretrotitle">Frosix</h1>
 			<div id="ffd">
 				<div id="ffdcontent">
 					<div id="coreselectarea">
