--- a/info/tos.html
+++ b/info/tos.html
@@ -27,7 +27,7 @@
 		<h2>Acceptance of these terms</h2>
 		<p>You acknowledge that you have read this Agreement and agree to all its terms and conditions. By accessing and using the Website and Services you agree to be bound by this Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to access or use the Website and Services. This terms and conditions policy was created with the <a target="_blank" href="https://www.websitepolicies.com/terms-and-conditions-generator">terms and conditions generator</a>.</p>
 		<h2>Contacting us</h2>
-		<p>If you would like to contact us to understand more about this Agreement or wish to contact us concerning any matter relating to it, you may message me on discord: OlyB#9420.</p>
-		<p>This document was last updated on April 24, 2021</p>
+		<p>If you would like to contact us to understand more about this Agreement or wish to contact us concerning any matter relating to it, you may message me on chiragtirth.dev@gmail.com</p>
+		<p>This document was last updated on October 6, 2025</p>
 	</body>
 </html>
