--- a/index.html
+++ b/index.html
@@ -213,11 +213,7 @@
 					</div>
 				</div>
 				<div class="source">
-					<a href="https://github.com/BinBashBanana/webretro" target="_blank">GitHub</a>
-					<a href="https://github.com/libretro" target="_blank">Libretro</a>
-					<a href="" target="_blank" id="coregithub">Core Github</a>
-					<a href="https://emscripten.org" target="_blank">Emscripten</a>
-					<a href="info/" target="_blank">Info</a>
+					<a href="https://frosix.xyz" target="_blank">Frosix Website</a>
 					<span id="versionindicator"></span>
 				</div>
 			</div>
